initial setup for docker